Rewrite `pom.xml`